# odoo_mcp

./: .dockerignore  Dockerfile  README.md  pyproject.toml
odoo_mcp/: __init__.py  __main__.py  config.py  server.py
odoo_mcp/connection/: __init__.py  json2_adapter.py  jsonrpc_adapter.py  manager.py  protocol.py  version.py  xmlrpc_adapter.py
odoo_mcp/errors/: __init__.py  handler.py  patterns.py
odoo_mcp/prompts/: __init__.py  provider.py
odoo_mcp/registry/: __init__.py  generator.py  model_registry.py  static_data.py
odoo_mcp/resources/: __init__.py  provider.py  uri.py
odoo_mcp/safety/: __init__.py  audit.py  limits.py  modes.py
odoo_mcp/search/: __init__.py  domain.py  progressive.py
odoo_mcp/toolsets/: __init__.py  accounting.py  attachments.py  base.py  chatter.py  core.py  crm.py  formatting.py  helpdesk.py  helpers.py  inventory.py  project.py  registry.py  reports.py  sales.py  wizard.py
scripts/: runtime_introspect.py
spec/: 00_OUTLINE.md  01_ARCHITECTURE.md  02_CONNECTION.md  03_TOOLSETS.md  04_CORE_TOOLS.md  05_WORKFLOW_TOOLS.md  06_RESOURCES_AND_PROMPTS.md  07_REGISTRY.md  08_SEARCH.md  09_CHATTER_ATTACHMENTS_REPORTS.md  10_ERROR_HANDLING.md  11_SAFETY_CONFIG.md
spec/L2/: 02a_VERSION_DETECTION.md  02b_DUAL_PROTOCOL.md  04a_DOMAIN_SYNTAX.md  05a_WIZARD_PROTOCOL.md  10a_ERROR_PATTERNS.md
tasks/: README.md  group1_foundation.md  group2_errors_safety.md  group3_registry_resources.md  group4_core_tools_search.md  group5_workflow_toolsets.md
tests/: conftest.py  test_config.py
tests/test_connection/: test_json2.py  test_jsonrpc.py  (+3 more)
(+25 files in other folders)
