[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-mcp"
version = "0.1.0"
description = "MCP server for Odoo ERP — exposes Odoo as tools, resources, and prompts for LLM clients"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Interpt", email = "dev@interpt.co" },
]
keywords = ["mcp", "odoo", "erp", "llm", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
odoo-mcp = "odoo_mcp.__main__:main"
odoo-mcp-registry = "odoo_mcp.registry.generator:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a live Odoo instance",
]
